trying to remove the left blog-like bar

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,9 @@
 ---
 
 @import "{{ site.theme }}";
+
+header {
+  width:270px;
+  position:fixed;
+  -webkit-font-smoothing:subpixel-antialiased;
+}
