--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,3 @@
----
----
-
 @import "fonts";
 @import "rouge-github";
 
@@ -110,8 +107,8 @@ img {
 
 header {
   width:270px;
-  position: fixed;
-  background-color: white;
+  float:left;
+  position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
@@ -177,6 +174,7 @@ header ul a strong {
 
 section {
   width:500px;
+  float:right;
   padding-bottom:50px;
 }
 
