--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,20 +14,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Research Repo</h1>
+        <h1><a href="https://metanymie.github.io">Research Repo</a></h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-
-        {% if site.github.is_project_page %}
-          <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
-        {% endif %}
-
-        {% if site.show_downloads %}
-          <ul>
-            <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-            <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-            <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-          </ul>
-        {% endif %}
+ 
       </header>
       <section>
 
