--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{%- assign _research = site.posts | sort: 'date' | reverse -%}
+{%- assign _research = site.research | sort: 'date' | reverse -%}
 {%- include header.html scrolly_nav=_research -%}
 <!-- Main -->
 <div id="main">
