--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 ---
-{%- assign _research = site.posts | sort: 'date' | reverse -%}
-{%- include header.html scrolly_nav=_research -%}
+{%- assign _posts = site.posts | sort: 'date' | reverse -%}
+{%- include header.html scrolly_nav=_posts -%}
 <!-- Main -->
 <div id="main">
 	{%- if page.content != "" -%}
 		{%- include section.html title=page.title photo=page.cover-photo photo-alt=page.cover-photo-alt auto-header=page.auto-header content=page.content -%}
 	{%- endif -%}
 	<!-- Posts List -->
-	{%- for _post in _research -%}
+	{%- for _post in site.categories.posts.research -%}
 		{%- capture _title -%}
 			<a href="{{- _post.url | absolute_url -}}">{{- _post.title -}}</a>
 		{%- endcapture -%}
